--- a/WORKS/src/test/html/test.html
+++ b/WORKS/src/test/html/test.html
@@ -43,7 +43,7 @@
 </div>
 
 <!--↓エラーでる・・-->
-<script src="../js/libs/jquery-1.10.2.min.js"></script>
+<script src="../../dist/libs/jquery-1.10.2.min.js"></script>
 
 <!--OK-->
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
