--- a/WORKS/src/test/html/test.html
+++ b/WORKS/src/test/html/test.html
@@ -42,13 +42,9 @@
 	</div>
 </div>
 
-<!--↓エラーでる・・-->
-<script src="../../dist/libs/jquery-1.10.2.min.js"></script>
 
-<!--OK-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
-
-<script src="../js/test.js"></script>
+<script src="../../../dist/libs/jquery-1.10.2.min.js"></script>
+<script src="../../../dist/test/js/test.js"></script>
 
 </body>
 </html>
