右へボタンの挙動

--- a/WORKS/src/test/html/odakyu.html
+++ b/WORKS/src/test/html/odakyu.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div class="carouselWrap">
+<div class="carouselWrapper">
 	<div class="carousel jscCarousel">
 		<div class="carouselWindow jscCarouselWindow">
 			<ul class="carouseImglList jscCarouseImglList">
@@ -32,14 +32,17 @@
 				<li>
 					<img src="http://www.odakyu.jp/data/o5oaa100000000bg-img/oertop_days.jpg" alt="">
 				</li>
+				<li>
+					<img src="http://www.odakyu.jp/data/VSbanner_1440_499.jpg" alt="">
+				</li>
 			</ul>
 		</div>
 	</div>
 	<div class="carouselBtnWrap">
 		<div class="carouselBtn">
 			<div class="carouselArrowBtnWrap">
-				<button class="rightBtn"></button>
-				<button class="leftBtn"></button>
+				<button class="rightBtn jscRightBtn"></button>
+				<button class="leftBtn jscLeftBtn"></button>
 			</div>
 			<ul class="indicatorBtnList cf">
 				<li>
